--- a/RecipiesNstuff/Pages/Index.cshtml
+++ b/RecipiesNstuff/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page - Hi Nia";
+    ViewData["Title"] = "Home page - Hi Nia 2";
 }
 
 <div class="text-center">
