--- a/RecipiesNstuff/Pages/Index.cshtml
+++ b/RecipiesNstuff/Pages/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page - Hi Nia 3";
+    ViewData["Title"] = "Home page";
 }
+
+<p>@DateTime.Now.ToString()</p>
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
