--- a/RecipiesNstuff/Pages/Index.cshtml
+++ b/RecipiesNstuff/Pages/Index.cshtml
@@ -4,11 +4,26 @@
     ViewData["Title"] = "Home page";
 }
 
-<h1>Hi Nia 5!</h1>
+<div class="card">
+  <div class="card-header">
+    Welcome
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">A site to collect notes</h5>
+    <p class="card-text">Description</p>
+    
+    <form asp-page-handler="logon" method="post">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
-<p>@DateTime.Now.ToString()</p>
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+  </div>
 </div>
