--- a/RecipiesNstuff/Pages/Index.cshtml
+++ b/RecipiesNstuff/Pages/Index.cshtml
@@ -13,16 +13,29 @@
     <p class="card-text">Description</p>
     
     <form asp-page-handler="logon" method="post">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email address">
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-4">
+                    <div class="form-group">
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">Logon</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+      
     </form>
 
   </div>
