test data, pagination

--- a/RecipiesNstuff/Pages/NoteBook/Index.cshtml
+++ b/RecipiesNstuff/Pages/NoteBook/Index.cshtml
@@ -111,6 +111,8 @@
             <br />
         }
 
+        <p>@(Model.TotalNotes) notes<p>
+
         <button type="button" class="btn btn-primary">Add new note</button>
 
     </div>
