--- a/RecipiesNstuff/Pages/NoteBook/Index.cshtml
+++ b/RecipiesNstuff/Pages/NoteBook/Index.cshtml
@@ -31,6 +31,36 @@
 
         </form>
 
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <nav aria-label="Page navigation example">
+                      <ul class="pagination">
+                            @for(int i=1;i<=(Model.TotalNotes / Model.PerPage) + (Model.TotalNotes % Model.PerPage == 0 ? 0 : 1); i++)
+                            {
+                                <li class="page-item"><a class="page-link" href="#">@i</a></li>
+                            }
+                      </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <p>@(Model.TotalNotes) notes<p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <button type="button" class="btn btn-primary">Add new note</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="container"><br /></div>
+
         @foreach (var n in Model.Notes)
         {
 
@@ -111,18 +141,33 @@
             <br />
         }
 
-        <nav aria-label="Page navigation example">
-          <ul class="pagination">
-                @for(int i=1;i<=(Model.TotalNotes / Model.PerPage) + (Model.TotalNotes % Model.PerPage == 0 ? 0 : 1); i++)
-                {
-                    <li class="page-item"><a class="page-link" href="#">@i</a></li>
-                }
-          </ul>
-        </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <nav aria-label="Page navigation example">
+                      <ul class="pagination">
+                            @for(int i=1;i<=(Model.TotalNotes / Model.PerPage) + (Model.TotalNotes % Model.PerPage == 0 ? 0 : 1); i++)
+                            {
+                                <li class="page-item"><a class="page-link" href="#">@i</a></li>
+                            }
+                      </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <p>@(Model.TotalNotes) notes<p>
+                </div>
+            </div>
+        </div>
 
-        <p>@(Model.TotalNotes) notes<p>
-
-        <button type="button" class="btn btn-primary">Add new note</button>
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <button type="button" class="btn btn-primary">Add new note</button>
+                </div>
+            </div>
+        </div>
 
     </div>
 </div>
