--- a/RecipiesNstuff/Pages/NoteBook/Index.cshtml
+++ b/RecipiesNstuff/Pages/NoteBook/Index.cshtml
@@ -1,10 +1,8 @@
-﻿@page
+﻿@page "{PageNum:int?}"
 
 @using RecipiesNstuff.Domain.Extentions;
 
 @model RecipiesNstuff.Pages.NoteBook.IndexModel
-@{
-}
 
 <div class="card">
     <div class="card-header">
@@ -40,7 +38,7 @@
                           <ul class="pagination">
                                 @for(int i=1;i<=(Model.TotalNotes / Model.PerPage) + (Model.TotalNotes % Model.PerPage == 0 ? 0 : 1); i++)
                                 {
-                                    <li class="page-item"><a class="page-link" href="#">@i</a></li>
+                                    <li class="page-item"><a class="page-link" href="/Notebook/?PageNum=@i">@i</a></li>
                                 }
                           </ul>
                         </nav>
@@ -158,7 +156,7 @@
                           <ul class="pagination">
                                 @for(int i=1;i<=(Model.TotalNotes / Model.PerPage) + (Model.TotalNotes % Model.PerPage == 0 ? 0 : 1); i++)
                                 {
-                                    <li class="page-item"><a class="page-link" href="#">@i</a></li>
+                                    <li class="page-item"><a class="page-link" href="/Notebook/?PageNum=@i">@i</a></li>
                                 }
                           </ul>
                         </nav>
